# private-isu-rust

./: Cargo.toml  README.md
etc/: isu-rust.service
src/: main.rs  store.rs
templates/: index.html  login.html  post.html  register.html
