[package]
name = "isuconp"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
minijinja = { version = "2.3.1", features = ["loader"] }
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.8", features = [ "runtime-tokio", "mysql", "chrono" ] }
thiserror = "1.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.6", features = ["trace", "fs"] }
tower-sessions = "0.13"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
